<resources>

    <string name="app_name">QuizzProject</string>
    <string name="title_activity_friend_view">FriendView</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="Fiend_your_friends">Find your friends</string>
    <string name="label_Fiend_your_friends">find_your_friend"</string>

    <array name="names">
        <item>David Pizarro</item>
        <item>Manuel García Varés</item>
        <item>Eduardo Centeno</item>
        <item>Tylos</item>
        <item>Elisa Pastor</item>
        <item>Lurecas</item>
        <item>Carlos Romero</item>
        <item>JAMM</item>
        <item>Juan Carlos Domínguez</item>
        <item>Pablo Domínguez</item>
    </array>
    <array name="ages">
        <item>26 years old</item>
        <item>32 years old</item>
        <item>28 years old</item>
        <item>26 years old</item>
        <item>33 years old</item>
        <item>26 years old</item>
        <item>41 years old</item>
        <item>∞ years old</item>
        <item>26 years old</item>
        <item>26 years old</item>
    </array>
    <string-array name="photos">
        <item>@drawable/pizarro</item>
        <item>@drawable/manu</item>
        <item>@drawable/edu</item>
        <item>@drawable/tylos</item>
        <item>@drawable/elisa</item>
        <item>@drawable/lurecas</item>
        <item>@drawable/romero</item>
        <item>@drawable/jamm</item>
        <item>@drawable/juanqui</item>
        <item>@drawable/pablo</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="profile">PROFILE</string>
    <string name="select_theme">SELECT THEME</string>
    <string name="play">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="first_title">Quizz</string>
    <string name="first_desc">Get ready</string>
    <string name="second_title">Twice a day</string>
    <string name="second_desc">Relax</string>
    <string name="third_title">Connect</string>
    <string name="third_desc">Connect to be player ... easy just clic</string>
    <string name="loginLabel">Login</string>
    <string name="passwordLabel">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="createAccount">Create an account</string>
    <string name="validate">Validate</string>
    <string name="back_to_login">Back to Login</string>
    <string name="question">Question</string>
    <string name="Fragment">This is a question from a specific theme dfbjh ihef  iohfeobuihefubio evoheobfb fvhofv oehvoiufb evnhfeiobn?</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
</resources>
