<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/button_toolbar"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_arrow_back_white_48px"
            android:clickable="true"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.QuizzItem"
        android:layout_marginTop="@dimen/medium_margin">

        <ImageView
            style="@style/ImageView.QuizzItem"
            android:src="@drawable/ic_profile" />

        <com.example.dmk.quizzproject.widget.CanaroTextView
            android:id="@+id/profile"
            style="@style/TextView.QuizzItem"
            android:text="@string/profile"
            android:clickable="true"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_group"
        style="@style/LinearLayout.QuizzItem">

        <ImageView
            style="@style/ImageView.QuizzItem"
            android:src="@drawable/ic_feed" />

        <com.example.dmk.quizzproject.widget.CanaroTextView
            android:id="@+id/play"
            style="@style/TextView.QuizzItem"
            android:text="@string/play"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.QuizzItem">

        <ImageView
            style="@style/ImageView.QuizzItem"
            android:src="@drawable/ic_settings" />

        <com.example.dmk.quizzproject.widget.CanaroTextView
            android:id="@+id/settings"
            style="@style/TextView.QuizzItem"
            android:text="@string/settings"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>